# ArduinoCore-avr

./: CMakeLists.txt  CMakePresets.json  README.md  arduino_core_api.cmake
bootloaders/optiboot/: CMakeLists.txt
config/: CMakeLists.txt
config/cmake/: messages.cmake
config/compiler/: default_warnings.cmake
config/toolchain/: avr-gcc-toolchain.cmake
cores/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/EEPROM/: CMakeLists.txt
libraries/HID/: CMakeLists.txt
libraries/SPI/: CMakeLists.txt
libraries/SoftwareSerial/: CMakeLists.txt
libraries/Wire/: CMakeLists.txt
variants/: CMakeLists.txt
